fix spacing

--- a/media-queries/css/style.css
+++ b/media-queries/css/style.css
@@ -36,7 +36,7 @@
     .nested-grid{
       display: grid;
       padding: 2%;
-      gap: 1%;
+      gap: 2%;
       grid-template-columns: 50% 50%;
       grid-template-rows: 50% 50%;
       border: 1px solid red;
